--- a/charts/spam2000/values.yaml
+++ b/charts/spam2000/values.yaml
@@ -4,7 +4,7 @@ image:
   tag: "1.1394.355"
   imagePullSecrets: {}
 
-replicaCount: 1
+replicaCount: 2
 
 securityContext:
   runAsNonRoot: true
@@ -12,7 +12,7 @@ securityContext:
   runAsGroup: 1001
 podSecurityContext: {}
 podLabels: {}
-podAnnotations: # TODO
+podAnnotations:
   prometheus.io/scrape: "true"
   prometheus.io/path: "/metrics"
   prometheus.io/port: "3000"
